--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,38 @@
+# Environment variables (CRITICAL SECURITY)
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Dependencies
 node_modules
+*/node_modules/
+
+# Build outputs
+dist/
+build/
+*/dist/
+*/build/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Uploads
+uploads/
+*/uploads/
+
+# Database files
+*.db
+*.sqlite
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# IDEs
+.vscode/
+.idea/
